fix: less spacing for numbers in month view

--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -82,7 +82,7 @@ body {
 
 /* ACTUAL calendar */
 .timetable-content {
-  margin-top: 25%;
+  margin-top: 30px;
   position: relative;
 }
 
